# Riccati-LQR

./: CMakeLists.txt  README.md  example.cpp
include/: eigen_types.h  knotpoint.h  lqr.h  utils.h
